[package]
name = "process-reaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
byte-unit = "5.1"
libsystemd = "0.7"
signal-hook = "0.3"

[features]
default = []
